<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/settings_title_led">

        <!--    TODO IN THE FUTURE -->
<!--        <EditTextPreference-->
<!--                app:title="@string/pref_num_of_led"-->
<!--                app:key="LED_NUM"-->
<!--                app:useSimpleSummaryProvider="true"-->
<!--                app:defaultValue="10"/>-->

<!--             TODO IN THE FUTURE-->
<!--        <SeekBarPreference
                app:title="@string/pref_data_pin"
                app:key="DATA_PIN"
                android:max="12"
                app:min="3"
                app:showSeekBarValue="true"
                app:defaultValue="7"/>-->

        <SeekBarPreference
            app:title="@string/reset_pin"
            app:key="RESET_PIN"
            android:max="9"
            app:min="3"
            app:showSeekBarValue="true"
            app:defaultValue="5"/>


        <SwitchPreferenceCompat
            app:title="@string/pref_turn_on_led_after_connect"
            app:key="LED_TURN_ON"
            app:defaultValue="false"
        />

        <SeekBarPreference
                app:key="INIT_BRIGHTNESS"
                app:title="@string/pref_init_brightness"
                app:showSeekBarValue="true"
                android:max="100"
                android:dependency="LED_TURN_ON"
                app:defaultValue="50"
        />

        <ListPreference
                app:title="@string/pref_init_color"
                android:key="INIT_COLOR"
                android:entries="@array/init_color_entries"
                android:entryValues="@array/init_color_value"
                app:useSimpleSummaryProvider="true"
                android:dependency="LED_TURN_ON"
                android:defaultValue="16774657"
        />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_title_application">

        <SwitchPreferenceCompat
            app:title="@string/pref_night_mode"
            app:key="NIGHT_MOD"
            app:defaultValue="true"
        />

        <ListPreference
            app:title="@string/pref_language"
            android:key="LANGUAGE"
            android:entries="@array/language_entries"
            android:entryValues="@array/language_value"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="en"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/settings_title_bluetooth">

        <SwitchPreferenceCompat
            app:title="@string/pref_auto_turn_on_bluetooth"
            app:key="AUTO_ON_BT"
            android:summary="@string/pref_summary_auto_turn_on_bluetooth"
            />

        <SwitchPreferenceCompat
            app:title="@string/pref_auto_connect_with_device"
            app:key="BT_AUTO_CONNECT"
            android:summary="@string/pref_summary_auto_connect_with_device"
            android:dependency="AUTO_ON_BT"
        />

        <EditTextPreference
            app:title="@string/pref_device_name"
            app:key="DEVICE_NAME"
            android:dependency="BT_AUTO_CONNECT"
            app:useSimpleSummaryProvider="true"
        />
    </PreferenceCategory>
</PreferenceScreen>