<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <GridLayout
            android:id="@+id/gridLayout"
            style="@style/bg_MainGridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="3"
            app:layout_constraintHorizontal_weight=".1"
            tools:ignore="MissingConstraints"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                style="@style/bt_item_info_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_gravity="fill_horizontal"
                android:layout_column="0"
                android:text="@string/tv_bt_status"/>

        <TextView

                android:id="@+id/tv_con_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/bt_value_item_style"
                android:layout_gravity="fill_horizontal|left"
                android:breakStrategy="balanced"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="..."/>

        <TextView
                style="@style/bt_item_info_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_gravity="fill_horizontal"
                android:textColor="@color/white"
                android:text="@string/tv_bt_name"/>

        <TextView
                android:id="@+id/tv_bt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/bt_value_item_style"
                android:layout_gravity="fill_horizontal|left"
                android:breakStrategy="balanced"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:text="..."/>

        <TextView
                style="@style/bt_item_info_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_row="2"
                android:layout_column="0"
                android:textColor="@color/white"
                android:text="@string/tv_bt_address"/>

        <TextView
                android:id="@+id/tv_bt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/bt_value_item_style"
                android:layout_gravity="fill_horizontal|left"
                android:breakStrategy="balanced"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:layout_column="1"
                android:text="..."/>


        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_rowSpan="3"
                android:layout_gravity="center"
                android:layout_rowWeight="1">

            <Button
                    android:id="@+id/btn_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/btn_main_connect"
                    android:text="@string/btn_connect"/>


            <ProgressBar
                    android:id="@+id/progressBar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:visibility="invisible"
                    android:indeterminate="true"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintLeft_toLeftOf="@id/constraintLayout"
                    app:layout_constraintRight_toRightOf="@id/constraintLayout"
                    app:layout_constraintTop_toBottomOf="@id/btn_connect"
            />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </GridLayout>


    <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tabLayout">
    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tabLayout_style"
            app:tabInlineLabel="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/tabLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>